# BitMap-Image

./: CMakeLists.txt
include/: bmpsetting.h
src/: main.c
